@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--$Id$-->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  "http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.components.Shell</class>
+	<allow-body>yes</allow-body>
+	<parameters>
+		<allow-informal-parameters>no</allow-informal-parameters>
+		<parameter>
+			<name>title</name>
+			<java-type>java.lang.String</java-type>
+			<required>yes</required>
+		</parameter>
+		<parameter>
+			<name>stylesheet</name>
+			<java-type>com.primix.tapestry.IAsset</java-type>
+		</parameter>
+	</parameters>
+</specification>
