@@ -1,10 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<jwc id="shell">
 <!-- $Id$ -->
-<html>
-<head>
-<jwc id="styleSheet"/>
-<title>Tapestry Inspector: <jwc id="insertApplicationName"/></title>
-</head>
 <jwc id="body">
 
 <jwc id="selector">
@@ -30,4 +25,4 @@
 </jwc>
 </jwc>
 </jwc>
-</html>
+</jwc>
