@@ -1,14 +1,16 @@
-<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- $Id$ -->
-<html>
-<head>
-<title>Stale Link</title>
-</head>
+
+<jwc id="shell">
+
 <body>
+
 You have clicked on a <i>stale link</i>.  This is often the result of using your
 browser's <b>back</b> button.  You may continue by returning to the
 application's
+
 <b>
 <jwc id="home">home page</jwc></b>.
+
 </body>
-</html>
+
+</jwc>
